--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ timezone: Europe/Rome
 
 title: Davide Testa # the main title
 
-tagline: PhD Student in AI # it will display as the subtitle
+tagline: PhD Student in AI at Fondazione Bruno Kessler (FBK) # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  Phd, NLP, AI, Researcher
 
 # Fill in the protocol & hostname for your site.
 # E.g. 'https://username.github.io', note that it does not end with a '/'.
@@ -42,7 +42,7 @@ social:
     - https://github.com/Caput97 # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    - www.linkedin.com/in/davide-testa-70293b175
+    #- www.linkedin.com/in/davide-testa-70293b175
 
 # Site Verification Settings
 webmaster_verifications:
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://scholar.googleusercontent.com/citations?view_op=medium_photo&user=tDCesTEAAAAJ&citpid=3
+avatar: https://media.licdn.com/dms/image/v2/D4D03AQGCNa5qCdCVvQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1725701860870?e=1738195200&v=beta&t=2QawfyKXaScdwoVfWKlg8inXPh1corVjzqAE8flx_Vs
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
