--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ url: "https://Caput97.github.io"
 github:
   username: Caput97 # change to your GitHub username
 
-#twitter:
-#  username: twitter_username # change to your Twitter username
+twitter:
+  username: @itsdavide97
 
 social:
   # Change to your full name.
