--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ github:
   username: Caput97 # change to your GitHub username
 
 twitter:
-  username: @itsdavide97
+  username: itsdavide97
 
 social:
   # Change to your full name.
